Crash while using Edge Split modifier (while rotating vertices in edit mode with edge split viewable) #29205

Closed
opened 2011-11-08 20:02:10 +01:00 by Levi Schooley · 4 comments

%%%Blender crashes while rotating two vertices in edit mode. It seems to be the edge split modifier. See the attached .blend. Enter edit mode (two verts should be selected. Rotate them, and Blender crashes for me. Turn off the edge split modifier, and the crash stops.

Running Blender 2.60.0 r41226 64-bit on Windows 7 64-bit.%%%

%%%Blender crashes while rotating two vertices in edit mode. It seems to be the edge split modifier. See the attached .blend. Enter edit mode (two verts should be selected. Rotate them, and Blender crashes for me. Turn off the edge split modifier, and the crash stops. Running Blender 2.60.0 r41226 64-bit on Windows 7 64-bit.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Probably error is how vertices count is calculated (can see "Attempted to add a SmoothMesh vert beyond end of array" on the console). Will check if it's failure of modifier itself or it's something else produced this error.%%%

%%%Probably error is how vertices count is calculated (can see "Attempted to add a SmoothMesh vert beyond end of array" on the console). Will check if it's failure of modifier itself or it's something else produced this error.%%%

%%%Crash was fixed in rev41720, but actual problem still present in code. From commit log:

This bug is caused by exactly the same reason as #26316: differences in how new vertices/edges are getting calculated first and how they're adding later. In some cases extra vertices are creating which weren't counted before.

This patch prevents crash in such situations, but result mesh can be a bit wrong. This should work fine in bmesh, so think it's acceptable to have such workaround before actual fix coming with bmesh.

Thanks for report, closing it now.%%%

%%%Crash was fixed in rev41720, but actual problem still present in code. From commit log: This bug is caused by exactly the same reason as #26316: differences in how new vertices/edges are getting calculated first and how they're adding later. In some cases extra vertices are creating which weren't counted before. This patch prevents crash in such situations, but result mesh can be a bit wrong. This should work fine in bmesh, so think it's acceptable to have such workaround before actual fix coming with bmesh. Thanks for report, closing it now.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29205
No description provided.